fix(profile): Set color-main for links to be readable on grey bg

--- a/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/global/_typography.scss
+++ b/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/global/_typography.scss
@@ -121,7 +121,7 @@ main p, main ul.unstyled-list, main ul:not([class]), main td {
 		z-index: 1;
 		text-decoration: none;
 		border-bottom: 1px solid $color-main;
-		color: white;
+		color: $color-main;
 		@include transition(all 0.15s ease-in-out);
 
 		&:hover {
